Bug 1052947 Allow users to disable 4th button and/or 5th button of mouse on Windows r=smaug+jimm